<resources>

    <string name="menu_jogar">Jogar</string>
    <string name="menu_categoria">Categorias</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_desafios">Desafios</string>
    <string name="menu_amigos">Amigos</string>
    <string name="menu_meu_perfil">Meu Perfil</string>
    <string name="menu_sobre">Sobre</string>

    <string name="app_name">Forca</string>
    <string name="splash">Tela Splash</string>
    <string name="appname_categorias">Categorias</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="action_configuracoes">Configurações</string>

    <string name="nome">Nome</string>
    <string name="email">E-Mail</string>
    <string name="pontuação">Pontuação</string>
    <string name="palavras_descobertas">Palavras Descobertas</string>
    <string name="palavras_enviadas">Palavras Enviadas</string>
    <string name="editar">Editar</string>
    <string name="amigos">Amigos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_meu_perfil">Meu Perfil</string>
    <string name="title_activity_desafio">Desafio</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_amigos">Amigos</string>

    <string name="iniciar_outro_desafio">Iniciar outro desafio</string>
    <string name="perdeu_desafio">Você perdeu esse desafio</string>
    <string name="venceu_desafio">Você venceu esse desafio</string>

    <string name="empatou_desafio">Empate nesse desafio</string>

    <string name="espereando_desafiante">Esperando desafiante...</string>


</resources>
