<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/ic_jogar"
            android:id="@+id/nav_jogar"
            android:title="@string/menu_jogar" />
        <item
            android:icon="@mipmap/ic_categoria"
            android:id="@+id/nav_categoria"
            android:title="@string/menu_categoria" />
        <item
            android:icon="@mipmap/ic_ranking"
            android:id="@+id/nav_ranking"
            android:title="@string/menu_ranking" />
        <item
            android:icon="@mipmap/ic_desafio"
            android:id="@+id/nav_desafio"
            android:title="@string/menu_desafios" />
        <item
            android:icon="@mipmap/ic_amigos"
            android:id="@+id/nav_amigos"
            android:title="@string/menu_amigos" />

        <item
            android:icon="@mipmap/ic_perfil"
            android:id="@+id/nav_meuperfil"
            android:title="@string/menu_meu_perfil" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:icon="@mipmap/ic_sobre"
            android:id="@+id/nav_sobre"
            android:title="@string/menu_sobre" />
    </group>
</menu>
