<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitys.MeuPerfilFragment"
    tools:showIn="@layout/app_bar_meu_perfil">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:padding="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":    Usuário"
                    android:id="@+id/txvNomeUsuario"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":    Usuario.email.com"
                    android:id="@+id/txvEmailUsuario"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Editar"
                android:layout_marginTop="40dp"
                android:id="@+id/btnEditarMeuPerfil"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Pontuação"
                    android:id="@+id/txvPontuacaoDicaMeuPerfil"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:id="@+id/txvPontuacaoMeuPerfil"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvPontuacaoDicaMeuPerfil"
                    android:text="Palavras Descobertas"
                    android:id="@+id/txvPalavrasDescobertasDicaMeuPerfil"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvPontuacaoMeuPerfil"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:id="@+id/txvPalavrasDescobertasMeuPerfil"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvPalavrasDescobertasDicaMeuPerfil"
                    android:text="Palavras Enviadas"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txvPalavrasDescobertasDicaMeuPerfil"
                    android:text="0"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amigos"
                android:layout_marginTop="40dp"
                android:id="@+id/btnAmigosMeuPerfil"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
